--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulsoup4~=4.12.3
 EbookLib~=0.18
 pillow~=10.4.0
 flask~=3.0.2
-werkzeug~=3.0.1
+werkzeug~=3.0.6
 eyed3~=0.9.7
 PyJWT~=2.8.0
 paramiko~=3.4.0
@@ -16,3 +16,4 @@ yt-dlp>=2024.7.7
 sqlalchemy~=2.0.35
 flask-sqlalchemy~=3.1.1
 alembic~=1.13.3
+webvtt_py~=0.5.1
